--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,12 @@
 \usemintedstyle{colorful}
 \setminted[julia]{frame=lines,rulecolor=MidnightBlue,bgcolor=LGray,fontsize=\footnotesize ,breaklines}
 \usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows}
 \usetikzlibrary{mindmap}
+
+\tikzstyle{layer} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black]
+\tikzstyle{arrow} = [thick,->,>=stealth]
+
 
 \usepackage{pmboxdraw}
 %\usepackage{qtree}
