--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@
 \usepackage{array}
 \usepackage{multirow}
 
-\title{NumNN.jl: A Toolkit for Simulating Deeplearning Networks Supporting on Non-Conventional Arithmetic}
+\title{NumNN.jl: A Toolkit for Simulating Deeplearning Networks Supporting Non-Conventional Arithmetic}
 
 \author{%\IEEEauthorblockN
 	{Mohammad~Hizzani}\\
