edit the abstract

--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 	\maketitle
 
 	\begin{abstract}
-		The development of Deeplearning models requires hardware support, with deep architectures (organized around different number of layers and computations per layer whether they are nodes of fully-connected layers or channels of convolutional neural networks). Moreover, deeplearning models use big data for training, with the need for tuning the hyper parameters, requiring the repetition of the whole training process multiple times. Thus, hardware-friendly number systems and arithmetic have been introduced alternatively to the IEEE floating-point formats, which are cost effective and/or more accurate. However, the hardware design, verification and assessment are more complex and expensive processes. Hence, these arithmetic systems should be tested in simulation environments for the target applications, before moving forward to system design. Since most deeplearning frameworks and libraries target AI production, they only support the IEEE formats. This paper presents NumNN.jl, a tool for supporting and facilitating the design and prototyping of deeplearning systems based on different number representations. It provides an agile way of designing, training and evaluating any type of deeplearning (neural network) model with any number and arithmetic system(s).
+		The development of Deeplearning models requires hardware support, with deep architectures organized around different number of layers, whether they are fully-connected networks or convolutional. Moreover, deeplearning models use big data for training, with the need for tuning the hyper parameters, requiring the repetition of the whole training process multiple times. Thus, hardware-friendly number systems and arithmetic have been introduced alternatively to the IEEE floating-point formats, which are cost effective and/or more accurate. However, the hardware design, verification and assessment are complex and expensive processes. Hence, these arithmetic systems should be tested in simulation environments for the target applications, before moving forward to system design. Most deeplearning frameworks and libraries target AI production, they are supporting the IEEE floating point formats. This paper presents NumNN.jl, a tool for facilitating the design and prototyping of deeplearning systems based on different number representations. It provides an agile way of designing, training and evaluating any type of deeplearning (neural network) model with any number system. NumNN.jl has been used to develop deeplearning networks supported not only on 32-bit and 64-bit IEEE floating point formats but also on the Posit number representation.  Results, obtained with NumNN.jl for benchmarks, are presented and compared with TensorFlow, showing the practical interest of the proposed software tool.  
 	\end{abstract}
 
 	\input{introduction}
